# Imperial_MSc_AI

./: .gitignore  requirements.txt
CarbonForecaster/: .gitignore  LICENSE  README.md  final_xgb_model.ubj  params_xgb.pickle  pyproject.toml  repo_URL.txt  requirements.txt
CarbonForecaster/presentations/: project_plan_v0.pptx
CarbonForecaster/report/: background_report.tex  includes.tex  main.brf  references.bib  scope3.tex
CarbonForecaster/report/figures/: LSEG_S3_flowchart.drawio  MLP.drawio  MLWorkFlow.drawio  all_models.drawio  gradient_boosting.drawio  ifm_logo.drawio  perceptron.drawio  problem_statement_1.drawio  problem_statement_2.drawio  problem_statement_3.drawio  problem_statement_4.drawio
CarbonForecaster/src/: POC_one_shot.py  RAG.py  RAG_llama.py  api_excel_ftse350_comparison.py  charts.py  clean_raw_data.py  custom_functions.py  eda.py  extension_1_outliers.py  extension_2_underreporting.py  extension_3_category.py  load_raw_data.py  m4_xgboost_random_folding.py  ml_pipeline.py  most_material_s3_categories.py  preprocessing.py  stepwise_regression.py  stratified_sampling.py  tft_demand_forecasting_tutorial.py  tft_exercise.py  utilities.py
CarbonForecaster/src/figures/: chart_presets.py
CarbonForecaster/src/models/: m1_emission_persistence.py  m2_sector_medians.py  m3_simple_regression.py  m4_xgboost.py  tuning.py
CarbonForecaster/src/models/tuned/: EL_s1_and_s2_co2e_core_all_2016_2022_log.pickle  EL_s1_and_s2_co2e_extended_ExCovid_2016_2022_robust.pickle  (+489 more)
CarbonForecaster/tests/: test_load_raw_data.py  test_stepwise_regression.py
(+18 files in other folders)
